feat: add footer element and styles

--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
       </section>
     </main>
   </div>
+
+  <footer>
+    Feito com <img src="assets/heart.svg" alt="Emoji de coracao"> pela Rocketseat
+  </footer>
 </body>
 
 </html>
